--- a/Static.KBlog/blog_viviana.html
+++ b/Static.KBlog/blog_viviana.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="resrc/less/all.css" />
     <link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
-
+    <script src="resrc/libs/jquery.js"></script>
+    <script src="resrc/ts/Utils.js"></script>
+    <script src="resrc/ts/ContentLoader.js"></script>
+    <script src="resrc/ts/KBlog.js"></script>
 </head>
 <body>
     <header>
