--- a/Static.KBlog/blog_viviana.html
+++ b/Static.KBlog/blog_viviana.html
@@ -13,6 +13,11 @@
     <script src="resrc/ts/KBlog.js"></script>
 </head>
 <body>
+    <section class="login">
+        <div><span>Username</span><input type="text" name="username" /></div>
+        <div><span>Password</span><input type="password" name="password" /></div>
+        <a class="submit">Log in</a>
+    </section>
     <header>
         <nav>
             <a href="blog_annika.html"><img src="Media/nav-1.jpg" /><span>ANNIKA</span></a><a href="blog_viviana.html"><img src="Media/nav-2.jpg" /><span>VIVIANA</span></a>
@@ -23,104 +28,9 @@
         <h1>VIVIANA VITOMARCO</h1>
         <span class="email"><a href="mailto:viviana_vitomarco@the-sense-of-fashion.com">viviana_vitomarco@the-sense-of-fashion.com</a></span>
 
-        <!-- Start Blogpost-->
-        <section class="blogpost" data-template-id="1" data-content-id="2">
-            <h2 data-field-name="headline">new items</h2>
-            <span data-field-name="date">6/04/2014</span>
-
-            <article data-array-name="content" data-array-index="0">
-                i went on a little shopping trip this weekend and found some really cute things.<br />
-                i think the earrings from zara will look amazing with a classic casual evening outfit, i am loving these blue tones.<br />
-                finally i also discovered the tangle teezer and of course i had to buy it because it's just practical and kind a stylish!<br />
-                i really liked the eyeshadow colors of barry m (bought in topshop). they are sparkling and this one can look ether blue or purple glittering. it's perfect for a night out!<br />
-                the nail polish is also quite good i am recently loving matt nail polish.<br />
-                enjoy your day xx
-            </article>
-            <figure>
-                <img data-array-name="content" data-array-index="1" src="Media/image-4.jpg" alt="" />
-                <figcaption>
-                    Image Description 1
-                </figcaption>
-            </figure>
-            <figure>
-                <img data-array-name="content" data-array-index="2" src="Media/image-5.jpg" />
-                <figcaption>
-                    Image Description 2
-                </figcaption>
-            </figure>
-            <figure>
-                <img data-array-name="content" data-array-index="3" src="Media/image-6.jpg" />
-                <figcaption>
-                    Image Description 3
-                </figcaption>
-            </figure>
-            <figure>
-                <img data-array-name="content" data-array-index="4" src="Media/image-7.jpg" />
-                <figcaption>
-                    Image Description 3
-                </figcaption>
-            </figure>
-            <figure>
-                <img data-array-name="content" data-array-index="5" src="Media/image-8.jpg" />
-                <figcaption>
-                    Image Description 3
-                </figcaption>
-            </figure>
-            <article data-array-name="content" data-array-index="6">
-                earrings - <a href="http://www.zara.com/">zara</a> <br />
-                bracelet/necklace - <a href="http://www.forever21.com/EU/Product/Main.aspx?br=f21&lang=en-US">forever21</a><br />
-                eyeshadow/nailpolish - <a href="http://www.barrym.com/">barry m</a><br />
-                hairbrush - <a href="http://www.tangleteezer.com/index.php">tangle teezer</a><br />
-            </article>
-            <div class="social-media">
-                <span class="facebook"></span>
-                <span class="twitter"></span>
-                <span class="pinterest"></span>
-                <span class="google"></span>
-            </div>
-        </section>
-        <!-- End Blogpost -->
-        <!-- Start Blogpost-->
-        <section class="blogpost" data-template-id="1" data-content-id="1">
-            <h2 data-field-name="headline">jungle</h2>
-            <span data-field-name="date">6/05/2014</span>
-
-            <article data-array-name="content" data-array-index="0">
-                a little throw back thursday post
-                <br />
-                xx
-            </article>
-            <figure>
-                <img data-array-name="content" data-array-index="1" src="Media/image-1.jpg" alt="" />
-                <figcaption>
-                    Image Description 1
-                </figcaption>
-            </figure>
-            <figure>
-                <img data-array-name="content" data-array-index="2" src="Media/image-2.jpg" />
-                <figcaption>
-                    Image Description 2
-                </figcaption>
-            </figure>
-            <figure>
-                <img data-array-name="content" data-array-index="3" src="Media/image-3.jpg" />
-                <figcaption>
-                    Image Description 3
-                </figcaption>
-            </figure>
-            <!-- Edited url parameters for soundcloud -->
-            <iframe data-field-name="soundcloud" width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102385010&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=true"></iframe>
-            <div class="social-media">
-                <span class="facebook"></span>
-                <span class="twitter"></span>
-                <span class="pinterest"></span>
-                <span class="google"></span>
-            </div>
-        </section>
-        <!-- End Blogpost -->
+        <!-- Add Content here -->
+        <img class="loading" src="resrc/img/loading.gif" />
     </div>
-    <footer>
-        POWERD BY KnK
-    </footer>
+
 </body>
 </html>
