--- a/Static.KBlog/blog_annika.html
+++ b/Static.KBlog/blog_annika.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="resrc/less/all.css" />
     <link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet" type="text/css">
+    <script src="resrc/libs/jquery.js"></script>
+    <script src="resrc/ts/Utils.js"></script>
+    <script src="resrc/ts/ContentLoader.js"></script>
+    <script src="resrc/ts/KBlog.js"></script>
 
 </head>
 <body>
@@ -19,49 +23,8 @@
         <!-- BLOG HEADLINE -->
         <h1>ANNIKA NACHNAME</h1>
         <span class="email"><a href="mailto:annika_nachname@the-sense-of-fashion.com">annika_nachname@the-sense-of-fashion.com</a></span>
-
-
-        <!-- Start Blogpost-->
-        <section class="blogpost" data-template-id="1" data-content-id="1">
-            <h2 data-field-name="headline">jungle</h2>
-            <span data-field-name="date">6/05/2014</span>
-
-            <article data-array-name="content" data-array-index="0">
-                a little throw back thursday post
-                <br />
-                xx
-            </article>
-            <figure>
-                <img data-array-name="content" data-array-index="1" src="Media/image-1.jpg" alt="" />
-                <figcaption>
-                    Image Description 1
-                </figcaption>
-            </figure>
-            <figure>
-                <img data-array-name="content" data-array-index="2" src="Media/image-2.jpg" />
-                <figcaption>
-                    Image Description 2
-                </figcaption>
-            </figure>
-            <figure>
-                <img data-array-name="content" data-array-index="3" src="Media/image-3.jpg" />
-                <figcaption>
-                    Image Description 3
-                </figcaption>
-            </figure>
-            <!-- Edited url parameters for soundcloud -->
-            <iframe data-field-name="soundcloud" width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102385010&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=true"></iframe>
-            <div class="social-media">
-                <span class="facebook"></span>
-                <span class="twitter"></span>
-                <span class="pinterest"></span>
-                <span class="google"></span>
-            </div>
-        </section>
-        <!-- End Blogpost -->
+        <img class="loading" src="resrc/img/loading.gif" />
     </div>
-    <footer>
-        POWERD BY KnK
-    </footer>
+
 </body>
 </html>
