Start Backend typescript

--- a/Static.KBlog/content_viviana.html
+++ b/Static.KBlog/content_viviana.html
@@ -1,7 +1,7 @@
 ﻿<!-- Start Blogpost-->
 <section class="blogpost" data-template-id="1" data-content-id="2">
     <h2 data-field-name="headline">new items</h2>
-    <span data-field-name="date">6/04/2014</span>
+    <span class="date" data-field-name="date">6/04/2014</span>
 
     <article data-array-name="content" data-array-index="0">
         i went on a little shopping trip this weekend and found some really cute things.<br />
@@ -11,33 +11,33 @@
         the nail polish is also quite good i am recently loving matt nail polish.<br />
         enjoy your day xx
     </article>
-    <figure>
-        <img data-array-name="content" data-array-index="1" src="Media/image-4.jpg" alt="" />
-        <figcaption>
+    <figure data-array-name="content" data-array-index="1">
+        <img src="Media/image-4.jpg" alt="" />
+        <figcaption data-object-field="caption">
             Image Description 1
         </figcaption>
     </figure>
-    <figure>
-        <img data-array-name="content" data-array-index="2" src="Media/image-5.jpg" />
-        <figcaption>
+    <figure data-array-name="content" data-array-index="2">
+        <img src="Media/image-5.jpg" />
+        <figcaption data-object-field="caption">
             Image Description 2
         </figcaption>
     </figure>
-    <figure>
-        <img data-array-name="content" data-array-index="3" src="Media/image-6.jpg" />
-        <figcaption>
+    <figure data-array-name="content" data-array-index="3">
+        <img src="Media/image-6.jpg" />
+        <figcaption data-object-field="caption">
             Image Description 3
         </figcaption>
     </figure>
-    <figure>
-        <img data-array-name="content" data-array-index="4" src="Media/image-7.jpg" />
-        <figcaption>
+    <figure data-array-name="content" data-array-index="4">
+        <img src="Media/image-7.jpg" />
+        <figcaption data-object-field="caption">
             Image Description 3
         </figcaption>
     </figure>
-    <figure>
-        <img data-array-name="content" data-array-index="5" src="Media/image-8.jpg" />
-        <figcaption>
+    <figure data-array-name="content" data-array-index="5">
+        <img src="Media/image-8.jpg" />
+        <figcaption data-object-field="caption">
             Image Description 3
         </figcaption>
     </figure>
@@ -58,33 +58,33 @@
 <!-- Start Blogpost-->
 <section class="blogpost" data-template-id="1" data-content-id="1">
     <h2 data-field-name="headline">jungle</h2>
-    <span data-field-name="date">6/05/2014</span>
+    <span class="date" data-field-name="date">6/05/2014</span>
 
     <article data-array-name="content" data-array-index="0">
         a little throw back thursday post
         <br />
         xx
     </article>
-    <figure>
-        <img data-array-name="content" data-array-index="1" src="Media/image-1.jpg" alt="" />
-        <figcaption>
+    <figure data-array-name="content" data-array-index="1">
+        <img src="Media/image-1.jpg" alt="" />
+        <figcaption data-object-field="caption">
             Image Description 1
         </figcaption>
     </figure>
-    <figure>
-        <img data-array-name="content" data-array-index="2" src="Media/image-2.jpg" />
-        <figcaption>
+    <figure data-array-name="content" data-array-index="2">
+        <img src="Media/image-2.jpg" />
+        <figcaption data-object-field="caption">
             Image Description 2
         </figcaption>
     </figure>
-    <figure>
-        <img data-array-name="content" data-array-index="3" src="Media/image-3.jpg" />
-        <figcaption>
+    <figure data-array-name="content" data-array-index="3">
+        <img src="Media/image-3.jpg" />
+        <figcaption data-object-field="caption">
             Image Description 3
         </figcaption>
     </figure>
     <!-- Edited url parameters for soundcloud -->
-    <iframe data-field-name="soundcloud" width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102385010&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=true"></iframe>
+    <iframe data-field-name="soundcloud" data-field-value="https%3A//api.soundcloud.com/tracks/102385010" width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102385010&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=true"></iframe>
     <div class="social-media">
         <span class="facebook"></span>
         <span class="twitter"></span>
