--- a/KBlog2.0/Static.KBlog2.0/index.html
+++ b/KBlog2.0/Static.KBlog2.0/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-<html>
+<html data-pageId="1">
 <head>
+    <title>hallo</title>
     <script src="resrc/libs/jquery.js"></script>
     <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
     <script src="resrc/ts/pages.js"></script>
