--- a/KBlog2.0/Static.KBlog2.0/index.html
+++ b/KBlog2.0/Static.KBlog2.0/index.html
@@ -3,17 +3,13 @@
 <head>
     <title>hallo</title>
     <!--<script src="resrc/ts/all.js"></script>-->
-    <script src="resrc/libs/jquery.js"></script>
-    <script src="resrc/libs/jquery.tmpl.js"></script>
-    <script src="resrc/libs/functions.lib.js"></script>
-    <script src="resrc/ts/KBlog.js"></script>
-    <script src="resrc/ts/PageLoader.js"></script>
-    <script src="resrc/ts/TemplateRenderer.js"></script>
+    <script src="resrc/js/all.js"></script>
+    <link href="resrc/css/all.css" rel="stylesheet" />
 </head>
 <body>
     <main></main>
-    <a href="../HttpHandler/ajaxHandler.php?name=kwame">Ajax</a>
-    <a href="../HttpHandler/templateHandler.php?template=headline&mdOrCp=Module">Template</a>
+<!--    <a href="../HttpHandler/ajaxHandler.php?name=kwame">Ajax</a>
+    <a href="../HttpHandler/templateHandler.php?template=headline&mdOrCp=Module">Template</a>-->
     <!--<img src="Media/image-1.jpg" alt="anni"/>-->
     <ul></ul>
 </body>
